## Process this file with automake to produce Makefile.in

SUBDIRS = cbc

#EXTRA_DIST = ofb.h cfb.h nofb.h cbc.h ecb.h stream.h # ncfb.h ctr.h

noinst_LTLIBRARIES = libmcryptskm.la

libmcryptskm_la_SOURCES =
libmcryptskm_la_LIBADD = cbc/libmcryptskmcbc.la

#libofb_la_SOURCES = ofb.c
#libofb_la_LDFLAGS =  -module -avoid-version
#libctr_la_SOURCES = ctr.c
#libctr_la_LDFLAGS =  -module -avoid-version
#libcfb_la_SOURCES = cfb.c
#libcfb_la_LDFLAGS =  -module -avoid-version
#libncfb_la_SOURCES = ncfb.c
#libncfb_la_LDFLAGS =  -module -avoid-version
#libnofb_la_SOURCES = nofb.c
#libnofb_la_LDFLAGS =  -module -avoid-version
#libecb_la_SOURCES = ecb.c
#libecb_la_LDFLAGS =  -module -avoid-version
#libcbc_la_SOURCES = cbc.c
#libcbc_la_LDFLAGS =  -module -avoid-version
#libstream_la_SOURCES = stream.c
#libstream_la_LDFLAGS =  -module -avoid-version
